# databricks_poetry_integration

./: .gitignore  README.md
01_sample_lib/: publish.sh  pyproject.toml
01_sample_lib/samplelibyw/: __init__.py
02_sample_image/: Dockerfile  build_and_publish.sh
02a_sample_init_script/: Use init script to install poetry projects.py  poetry_init.sh  upload_init_script.sh
03_launch_poetry_cluster/: create_poetry_cluster.sh  poetry_cluster.json  poetry_cluster.json.tmp
03a_launch_cluster_with_init_script/: create_poetry_cluster.sh  poetry_cluster.json
sample-app/: Dockerfile  pyproject.toml
sample-lib/: pyproject.toml
