[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["Yang Wang <yangwang166@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sample-lib = {version = "^0.1.2", source = "artifact"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "artifact"
url = "https://yanganzssa-087659795860.d.codeartifact.ap-southeast-2.amazonaws.com/pypi/yanganzssa/simple"
secondary = true
